# robot_system_sandbox

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp  two_link_manipulator.urdf
robot_system/: CMakeLists.txt  dart_robot_system.cpp  dart_robot_system.hpp  pinocchio_robot_system.cpp  pinocchio_robot_system.hpp
script/: install_dart.sh  install_pinocchio.sh
